game controller and code changes